# Slack-Chatter-Service

./: .gitignore  .replit  AGENT_INTEGRATION_PROMPT.md  DEBUG_ENDPOINT_TEST.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_MCP.md  DEPLOYMENT_SUMMARY.md  Dockerfile  MCP_CLIENT_CONNECTION.md  MCP_REMOTE_PROTOCOL_SUMMARY.md  OAUTH_CLIENT_GUIDE.md  README.md  SECURE_API_KEY_GUIDE.md  SECURE_DEPLOYMENT_SUMMARY.md  SECURITY.md  SECURITY_SUMMARY.md  agent_prompt.yaml  api_server.py  config.py  data_models.py  demo_oauth_search.py  deploy.sh  docker-compose.yml  embedding_service.py  ingestion_state.json  local-slack-chatter_vectors.json  main.py  main_orchestrator.py  notion_logger.py  pinecone_service.py  pyproject.toml  rate_limiter.py  replit.md  replit_deploy.py  replit_web_server.py  scheduler.py  slack_ingester.py  test_deployment.py  test_local_mcp.py  (+6 more)
ingestion/: __init__.py  slack_ingester.py  worker.py
lib/: __init__.py  config.py  data_models.py  embedding_service.py  notion_logger.py  pinecone_service.py  rate_limiter.py  utils.py
mcp/: __init__.py  fastapi_app.py  llm_search_agent.py  mcp_2_0_server.py  server.py
scripts/: discover_channels.py  recreate_pinecone_index.py  verify_ingestion.py
search/: __init__.py  service.py
templates/: README.md  client_prompt.yaml  example_usage.py  slack_search_tool.py
