[project]
name = "repl-nix-workspace"
version = "1.0.0"
description = "Secure Slack Message Vector Search API"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "apscheduler>=3.11.0",
    "fastapi>=0.115.14",
    "notion-client>=2.4.0",
    "openai>=1.93.0",
    "pydantic>=2.11.7",
    "slack-sdk>=3.35.0",
    "uvicorn>=0.35.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.6",
]
